--- a/index.css
+++ b/index.css
@@ -1,3 +1,9 @@
 .test {
     max-resolution: 100%;
 }
+
+.pagina_favorita {
+    text-decoration: underline;
+    text-align: center;
+    text-transform: uppercase;
+}
