--- a/main.css
+++ b/main.css
@@ -4,10 +4,18 @@
 /* Responsive (320px, 768px, 1024px) */
 
 :root {
-    --backgroundColor: rgb(125, 0, 0);
+    --headerColor: rgb(80, 100, 150);
+    --backgroundColor: rgb(245, 245, 245);
     --titleColor: rgb(225, 225, 225);
     --textColor: rgb(200, 200, 200);
     --titleFont: 'Heebo', sans-serif;
+    --overall-padding: 30px;
+    --shadow-box-size: 0 0 10px 0px;
+
+
+    --firstTitleSize: 2vw;
+    --aTextSize: 5%;
+    --secondTextSize: 2vw;
 }
 
 * {
@@ -15,9 +23,31 @@
     font-weight: 400;
 }
 
+html, body {
+    max-width: 100%;
+    overflow-x: hidden;
+}
+
+header {
+    text-align: center;
+    background-color: var(--headerColor);
+    box-shadow: var(--shadow-box-size);
+}
+
 body {
+    background: radial-gradient(rgb(0, 0, 80), white);
     font-size: large;
-    background-color: aliceblue;
+    margin-left: auto;
+    margin-right: auto;
+    width: 80%;
+}
+
+header, footer {
+    margin: var(--overall-padding) 0px var(--overall-padding) 0px;
+}
+
+aside {
+    text-align: left;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -25,87 +55,144 @@ h1, h2, h3, h4, h5, h6 {
     font-weight: 500;
 }
 
-
-
-
-
-
-
-
-
-
-.test {
-    max-resolution: 100%;
+h2 {
+    font-weight: 300;
 }
 
-.pagina_favorita {
-    text-decoration: underline;
-    text-transform: uppercase;
+h3 {
+    font-size: 50px;
+    font-weight: 800;
 }
 
-html {
-    display: table;
-    margin: auto;
+h4, h5 {
+    font-size: 25px;
 }
 
-body {
-    display: table-cell;
-    vertical-align: middle;
-    background-color: rgb(14, 28, 38);
-}
-
-img {
-    align-self: center;
-    border-radius: 14px 14px;
-    border: 6px 6px 6px 6px;
-    outline: 5px;
-    outline-color: rgb(255, 255, 255);
-    outline-style: solid;
+p {
+    font-family: var(--titleFont);
+    font-weight: 400;
+    font-size: var(aTextSize);
+    text-align: justify;
 }
 
 
-div.container {
-   text-align: center;
+/* Clases y ids */
+
+.body-background {
+    background-color: var(--backgroundColor)
 }
 
-ol.receta, ul.receta, ul.hobbies {
-    display: inline-block;
-    text-align: left;
-}
-
-div ol li, div ul li, ul li {
-    text-align: left;
-}
-
-.center {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-.table_center {
-    margin-left: auto;
-    margin-right: auto;
-}
-
-table {
+.wrapper {
+    box-shadow: var(--shadow-box-size);
+    background-color: var(--backgroundColor);
+    display: flex;
+    flex-flow: row wrap;
     text-align: center;
 }
 
-table caption {
-    color: aliceblue;
+.wrapper > * {
+    padding: 10px;
+    margin: 10px;
+    flex: 1 100%;
+}
+
+.header {
+    text-align: left;
+    height: auto;
+}
+
+.footer {
+    height: 80px;
+}
+
+footer .container a {
+    width: 33%;
+    word-wrap: break-word;
+}
+
+.main {
+    text-align: left;
+    height: auto;
+    word-wrap: break-word;
+    overflow: hidden;
+
+}
+
+.main img {
+    border: 10px 10px 10px 10px;
+}
+
+.aside-one {
+
+}
+
+.aside-two {
+
+}
+
+.footerWrap {
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+    background-color: var(--backgroundColor);
+    box-shadow: var(--shadow-box-size);
+}
+
+footer > * {
+    font-size: x-large;
+}
+
+table {
+    box-sizing: border-box;
+    width: 100%;
+}
+
+table, th, td {
+    border: 2px solid var(--headerColor);
+    border-collapse: collapse;
+}
+th, td {
+    background-color: var(--titleColor);
+    text-align: center;
+    padding: 2px;
+}
+
+th {
     text-transform: uppercase;
-    text-decoration: underline;
+    font-weight: bold;
 }
 
-table thead {
-    color: rgb(200, 200, 200);
+/* Media / Responsive */
+
+ @media all and (min-width: 320px) {
+    .aside {
+        flex: 1;
+    }
+    .footerWrap {
+        width: 80%;
+    }
+ }
+
+ @media all and (min-width: 768px){
+    .main {
+        flex: 3;
+    }
+    .aside-one {
+        order: 1;
+    }
+    .aside-two {
+        order: 2;
+    }
+    .main {
+        order: 2;
+    }
+    .footer {
+        order: 4;
+    }
+    .footerWrap {
+        width: 40%;
+    }
 }
 
-table tbody tr td {
-    color: rgb(150, 150, 150);
-}
+/* Animaciones */
 
-nav, main, section, article, aside {
-    color: aliceblue;
-}
