--- a/main.css
+++ b/main.css
@@ -30,12 +30,13 @@ html, body {
 
 header {
     text-align: center;
-    background-color: var(--headerColor);
-    box-shadow: var(--shadow-box-size);
+    background-color: white;
+    height: 100px;
+    /* box-shadow: var(--shadow-box-size); */
 }
 
 body {
-    background: radial-gradient(rgb(0, 0, 80), white);
+    background: radial-gradient(rgb(0, 0, 0), white);
     font-size: large;
     margin-left: auto;
     margin-right: auto;
@@ -83,7 +84,7 @@ p {
 }
 
 .wrapper {
-    box-shadow: var(--shadow-box-size);
+    /* box-shadow: var(--shadow-box-size); */
     background-color: var(--backgroundColor);
     display: flex;
     flex-flow: row wrap;
@@ -98,6 +99,8 @@ p {
 
 .header {
     text-align: left;
+    justify-content: center;
+    align-items: center;
     height: auto;
 }
 
@@ -108,6 +111,14 @@ p {
 footer .container a {
     width: 33%;
     word-wrap: break-word;
+}
+
+a {
+    text-decoration: none;
+    font-weight: 500;
+    font-size: 1.5rem;
+    padding: 0 1rem 0 1rem;
+    color: black;
 }
 
 .main {
@@ -135,7 +146,7 @@ footer .container a {
     margin-left: auto;
     margin-right: auto;
     background-color: var(--backgroundColor);
-    box-shadow: var(--shadow-box-size);
+    /* box-shadow: var(--shadow-box-size); */
 }
 
 footer > * {
